DesiNZC/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccTotScope1EmissionsInTco2e__c</fullName>
        <label>Total Scope 1 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccTotScope2LocBasedEmissions__c</fullName>
        <label>Total Scope 2 Location-Based Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccTotScope2MktBasedEmissions__c</fullName>
        <label>Total Scope 2 Market-based Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccTotScope3EmissionsInTco2e__c</fullName>
        <description>Roll-Up of Total Scope 3 Emissions (tCO2e)</description>
        <label>Total Scope 3 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccTotalScp3DnstrmEmissions__c</fullName>
        <description>Roll-Up of Total Scope 3 Downstream Emissions</description>
        <label>Total Scope 3 Downstream Emissions(tCO2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccTotalScp3UpstrmEmissions__c</fullName>
        <description>Roll-Up of Total Scope 3 Upstream Emissions</description>
        <label>Total Scope 3 Upstream Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Quip Document Link for the Account Plan</description>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Account_Priority__c</fullName>
        <description>What: used in Reporting</description>
        <formula>IF( ( AnnualRevenue &gt;20000000),&quot;High Priority&quot;, IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Analytics_Latest_Sentiment__c</fullName>
        <description>This field is used for Data Pipelines demo. Added June 2021.</description>
        <label>Latest Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <description>What: used on the Account - Partner Page layout to detail the partner application date.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Days_Since_Activity__c</fullName>
        <description>What: used in reports for days since last activity</description>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Default_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used on the Account - Community Page layout to detail Default Location information. Lookup to Location Object</description>
        <label>Default Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Default_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Default Price Book for Account reference.</description>
        <inlineHelpText>Default price book for work orders</inlineHelpText>
        <label>Default Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_AA_User_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Maps field for assigning a user to the account. Who: Aaron Bendickson. When: Sept, 2021.</description>
        <label>Maps - User Territory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_TAM__c</fullName>
        <description>A number attribute field (Total Addressable Market) used to balance Accounts equally across territories</description>
        <label>SDO Maps TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of Active Leads for Partner Account</description>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number open opportunities owned by the current partner account</description>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Operating_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup field to Operating Hours Object</description>
        <inlineHelpText>If the customer has defined visiting hours, select them here.</inlineHelpText>
        <label>Operating Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Partner_Certification__c</fullName>
        <description>What: Used for Partner Certification Information</description>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Geographic_Coverage__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Program_Level__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partner_Type__c</fullName>
        <description>What: PRM field used in reporting</description>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                    <default>true</default>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Partnership_Status__c</fullName>
        <description>What: Used on the Account - Partner page layout to show the partnership status</description>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SFS_Default_Field_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS Field for Default Field Entitlement
Who: FSL team</description>
        <inlineHelpText>Select the default field service entitlement to use for this account and all of its assets</inlineHelpText>
        <label>Default Field Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: FSL/SFS Field for Service Territory</description>
        <inlineHelpText>What service territory is this account located in</inlineHelpText>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS/FSL Field for Work Type reference.
Who: SFS Team</description>
        <inlineHelpText>Default work type to use for this account for field service activity</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type_for_Quote_Creation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS/FSL Work Type for Quote Creation Field.
Who: SFS Field</description>
        <label>Work Type for Quote Creation</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts (Work Type for Quote Creation)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Closed_Lost_Opptys__c</fullName>
        <description>What: Used in Reporting for Open vs Closed Opptys</description>
        <label>Closed Lost Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Closed_Won_Opptys__c</fullName>
        <description>What: Closed Won Oppty Field Roll-up</description>
        <label>Closed Won Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Closed_Won_Value__c</fullName>
        <description>What: This is automatically calculated from closed opportunities.</description>
        <inlineHelpText>This is automatically calculated from closed opportunities.</inlineHelpText>
        <label>Total Sales</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Current_Year_Revenue_Goal__c</fullName>
        <description>What: Current year Revenue Goal</description>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Goal_Attainment__c</fullName>
        <description>What: Measure of YTD Revenue vs. Goal</description>
        <formula>SDO_YTD_Revenue_Generated__c  /  SDO_Sales_Current_Year_Revenue_Goal__c</formula>
        <label>% Goal Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_Conversion_Rate__c</fullName>
        <description>What: Sales Lead Conversion Rate.</description>
        <formula>if( AND(NULLVALUE(SDO_Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(SDO_Sales_Number_Leads_Total__c, 0)&lt;&gt;0), SDO_Number_Leads_Converted__c / SDO_Sales_Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_To_Opportunity_Close_Rate__c</fullName>
        <description>What: Close rate field. Used in multiple reports.</description>
        <formula>if( AND(NULLVALUE(SDO_Sales_Num_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SDO_Number_Leads_Converted__c, 0)&lt;&gt;0), SDO_Sales_Num_Closed_Won_Opportunities__c / SDO_Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Num_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Num_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Open_Oppty_Value__c</fullName>
        <description>What: Display total value of all open opptys by account.</description>
        <label>Open Oppty Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Open_Opptys__c</fullName>
        <description>What: Open Opptys by Account. Who: Sales Team.</description>
        <label>Open Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Opportunity_Win_Rate__c</fullName>
        <description>What: Sales field for Opportunity Win Rate.</description>
        <formula>if( AND(NULLVALUE(SDO_Sales_Num_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SDO_Sales_Number_Closed_Opportunities__c, 0)&lt;&gt;0), SDO_Sales_Num_Closed_Won_Opportunities__c / SDO_Sales_Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Rating_Indicator__c</fullName>
        <description>What: used in Channel Plans reporting</description>
        <formula>IMAGE(IF (SDO_Value__c &gt; 0, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 1, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 2, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 3, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 4, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+On.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/icons/account/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Region__c</fullName>
        <description>What: Used to regionalize sales information</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Value_Closed_Won_Opportunties__c</fullName>
        <description>What: Value of closed won opptys.</description>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Value_Open_Opportunties__c</fullName>
        <description>What: Total Value of Open Opptys for Partner Account</description>
        <label>Value of Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Value__c</fullName>
        <description>What: This field drives the Value Indicator field.  Enter a value of 1-5.</description>
        <label>Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_YTD_Revenue_Generated__c</fullName>
        <description>What: YTD Revenue Generated for Partner Account</description>
        <label>YTD Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope_3_Carbon_Footprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope 3 Carbon Footprint</label>
        <referenceTo>Scope3CrbnFtprnt</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>SPM Maps Tier Picklist</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Closed_Won_Opportunties__c</fullName>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Asset_Carbon_Footprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Asset Carbon Footprint</label>
        <referenceTo>VehicleAssetCrbnFtprnt</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>